Actions
Bug #10439
closedecpp: NULL pointer errors
Start date:
2019-02-22
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
NULL pointer errors:
In file included from ../../common/sys/param.h:48:0, from ../../common/io/ecpp.c:33: ../../common/io/ecpp.c: In function 'ecpp_attach': ../../common/sys/null.h:32:14: error: passing argument 6 of 'ddi_create_minor_node' makes integer from pointer without a cast [-Werror=int-conversion] #define NULL ((void *)0) ^ ../../common/io/ecpp.c:694:22: note: in expansion of macro 'NULL' DDI_NT_PRINTER, NULL) == DDI_FAILURE) { ^~~~ In file included from ../../common/io/ecpp.c:43:0: ../../common/sys/sunddi.h:1564:1: note: expected 'int' but argument is of type 'void *' ddi_create_minor_node(dev_info_t *dip, char *name, int spec_type, ^~~~~~~~~~~~~~~~~~~~~ ../../common/io/ecpp.c: In function 'dma8237_read_count': ../../common/io/ecpp.c:6206:10: error: return makes integer from pointer without a cast [-Werror=int-conversion] return (NULL); ^ cc1: all warnings being treated as errors
Updated by Electric Monk over 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 2520aea3664a4259338aefa2aa4a4945654615c6
commit 2520aea3664a4259338aefa2aa4a4945654615c6 Author: Toomas Soome <tsoome@me.com> Date: 2019-02-25T19:12:47.000Z 10439 ecpp: NULL pointer errors Reviewed by: Aurélien Larcher <aurelien.larcher@gmail.com> Reviewed by: Andy Stormont <astormont@racktopsystems.com> Reviewed by: Andy Fiddaman <andy@omniosce.org> Approved by: Dan McDonald <danmcd@joyent.com>
Actions