10439 ecpp: NULL pointer errors Reviewed by: Aurélien Larcher  <aurelien.larcher@gmail.com> Reviewed by: Andy Stormont <astormont@racktopsystems.com> Reviewed by: Andy Fiddaman <andy@omniosce.org> Approved by: Dan McDonald <danmcd@joyent.com>